<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.neaniesoft.myweather.weather.WeatherFragment"
    tools:showIn="@layout/activity_weather">

    <LinearLayout
        android:id="@+id/content_weather"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/text_label_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weather"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

        <TextView
            android:id="@+id/text_temp_and_conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blank"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <GridLayout
            android:layout_marginTop="@dimen/cell_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2">

            <TextView
                android:id="@+id/text_label_wind"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_wind"/>

            <TextView
                android:id="@+id/text_wind"
                style="@style/DataStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"/>

            <TextView
                android:id="@+id/text_label_cloudiness"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_cloudiness"/>

            <TextView
                android:id="@+id/text_cloudiness"
                style="@style/DataStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"/>

            <TextView
                android:id="@+id/text_label_pressure"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_pressure"/>

            <TextView
                android:id="@+id/text_pressure"
                style="@style/DataStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"/>

            <TextView
                android:id="@+id/text_label_humidity"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_humidity"/>

            <TextView
                android:id="@+id/text_humidity"
                style="@style/DataStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"/>

            <TextView
                android:id="@+id/text_label_rain"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_rain"/>

            <TextView
                android:id="@+id/text_rain"
                style="@style/DataStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"/>

            <TextView
                android:id="@+id/text_label_sunrise"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_sunrise"/>

            <TextView
                android:id="@+id/text_sunrise"
                style="@style/DataStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"/>

            <TextView
                android:id="@+id/text_label_sunset"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_sunset"/>

            <TextView
                android:id="@+id/text_sunset"
                style="@style/DataStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"/>
        </GridLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"/>
</FrameLayout>
